# amergin-example

./: .gitignore  badge.json  benchmark-action.json  index.html  pyproject.toml
.github/workflows/: ci.yml
src/numops/: __init__.py  aggregation.py  clipping.py  pipelines.py  processing.py
tests/: test_dispatch.py  test_evaluate.py  test_verify.py
