[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numops"
version = "0.1.0.dev0"
description = "Reference consumer for amergin — minimal numerical operations package"
requires-python = ">=3.10"
dependencies = [
    "amergin",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/numops"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.amergin.benchmark.functions.normalize]
parameters = {size = [1024, 4096, 16384]}

[tool.amergin.benchmark.functions.moving_average]
parameters = {size = [512, 2048], window = [8, 64]}

[tool.amergin.benchmark.functions.normalize_smoothed]
parameters = {size = [1024, 4096], window = [8, 64]}

[tool.amergin.benchmark.functions.clip_normalize]
parameters = {size = [4096, 16384]}
