[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numops"
version = "0.1.0.dev0"
description = "Reference consumer for amergin — minimal numerical operations package"
requires-python = ">=3.10"
dependencies = [
    "amergin",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/numops"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.amergin.benchmark.functions.normalize]
parameters = {size = [1024, 4096, 16384]}

[tool.amergin.benchmark.functions.moving_average]
parameters = {size = [512, 2048], window = [8, 64]}

[tool.amergin.benchmark.functions.normalize_smoothed]
parameters = {size = [1024, 4096], window = [8, 64]}

[tool.amergin.benchmark.functions.clip_normalize]
parameters = {size = [4096, 16384]}

# Environment catalog. nvidia + intel come straight from amergin's
# built-in defaults (out-of-the-box images). Only AMD is customized here:
# we pin an older ROCm 6.x / Ubuntu 22.04 / py3.10 image to demonstrate
# overriding a single field of a built-in (run_flags / hardware /
# machine_label are inherited). Override any other field the same way, or
# add a new environment under a new name.
[tool.amergin.environments.amd]
image = "rocm/pytorch:rocm6.2.4_ubuntu22.04_py3.10_pytorch_release_2.4.0"
notes = "custom: older ROCm 6.2 / py3.10 (default amd is ROCm 7.2 / py3.12)"
